k8s/apps/navidrome/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "4533"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: deluan/navidrome:0.64.2@sha256:38dc2727bfcfd5ede290f8ada114fc90368146f265ae4701ddddbcbe2a44ee52
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
              readOnly: true
            - name: backup
              mountPath: /backup
          securityContext:
            allowPrivilegeEscalation: false
            runAsGroup: 1000
            runAsUser: 1000
      volumes:
        - name: data
          hostPath:
            path: /mnt/local/navidrome/data
            type: DirectoryOrCreate
        - name: music
          hostPath:
            path: /mnt/pool/music
            type: DirectoryOrCreate
        - name: backup
          hostPath:
            path: /mnt/local/navidrome/backup
            type: DirectoryOrCreate
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
