k8s/apps/navidrome/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/scheme: http
    prometheus.io/path: /metrics
    prometheus.io/port: "4533"

spec:
  selector:
    app: default
  type: NodePort
  ports:
    - name: "4533"
      port: 4533
      targetPort: 4533
      nodePort: 4533
      protocol: TCP
